--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:label="@string/title_activity_settings"
             android:theme="@style/Theme.PlaylistMaker" />
         <activity
+            android:name=".PlayerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_player"
+            android:theme="@style/Theme.PlaylistMaker" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
