--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.playlistmaker'
+    namespace 'com.practicum.playlistmaker'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.playlistmaker"
+        applicationId "com.practicum.playlistmaker"
         minSdk 29
         targetSdk 34
         versionCode 1
