--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".ui.search.SearchActivity"
+            android:name=".ui.search.activity.SearchActivity"
             android:exported="false"
             android:label="@string/title_activity_search"
             android:theme="@style/Theme.PlaylistMaker" />
         <activity
-            android:name=".ui.mediatech.MediatechActivity"
+            android:name=".ui.mediatech.activity.MediatechActivity"
             android:exported="false"
             android:label="@string/title_activity_mediatech"
             android:theme="@style/Theme.PlaylistMaker" />
@@ -30,12 +30,12 @@
             android:label="@string/title_activity_settings"
             android:theme="@style/Theme.PlaylistMaker" />
         <activity
-            android:name=".ui.player.PlayerActivity"
+            android:name=".ui.player.activity.PlayerActivity"
             android:exported="false"
             android:label="@string/title_activity_player"
             android:theme="@style/Theme.PlaylistMaker" />
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.main.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
