--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "io.insert-koin:koin-android:3.3.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
