--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".ui.search.activity.SearchActivity"
+            android:name=".ui.search.fragment.SearchActivity"
             android:exported="false"
             android:label="@string/title_activity_search"
             android:theme="@style/Theme.PlaylistMaker" />
@@ -25,7 +25,7 @@
             android:label="@string/title_activity_mediatech"
             android:theme="@style/Theme.PlaylistMaker" />
         <activity
-            android:name=".ui.settings.activity.SettingsActivity"
+            android:name=".ui.settings.fragment.SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings"
             android:theme="@style/Theme.PlaylistMaker" />
