--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,28 +15,14 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".ui.search.fragment.SearchActivity"
-            android:exported="false"
-            android:label="@string/title_activity_search"
-            android:theme="@style/Theme.PlaylistMaker" />
-        <activity
-            android:name=".ui.mediatech.activity.MediatechActivity"
-            android:exported="false"
-            android:label="@string/title_activity_mediatech"
-            android:theme="@style/Theme.PlaylistMaker" />
-        <activity
-            android:name=".ui.settings.fragment.SettingsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/Theme.PlaylistMaker" />
-        <activity
             android:name=".ui.player.activity.PlayerActivity"
             android:exported="false"
             android:label="@string/title_activity_player"
             android:theme="@style/Theme.PlaylistMaker" />
         <activity
-            android:name=".ui.main.activity.MainActivity"
-            android:exported="true">
+            android:name=".ui.root.RootActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
