--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         <activity
             android:name=".ui.player.activity.PlayerActivity"
             android:exported="false"
-            android:label="@string/title_activity_player"
-            android:theme="@style/Theme.PlaylistMaker" />
+            android:windowSoftInputMode="adjustNothing"/>
         <activity
             android:name=".ui.root.RootActivity"
             android:exported="true"
