--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -60,4 +61,5 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.3.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.6"
 }
