--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,10 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
     def lifecycle_version = "2.6.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.6"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.6"
+
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -61,5 +62,4 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.3.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.6"
 }
