--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.3.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 }
