--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".ui.player.activity.PlayerActivity"
+            android:name=".ui.player.fragment.PlayerFragment"
             android:exported="false"
             android:windowSoftInputMode="adjustNothing"/>
         <activity
